limit form input length and avoid forminput overflow

--- a/frontend/src/components/Group/Group.css
+++ b/frontend/src/components/Group/Group.css
@@ -50,6 +50,7 @@
 
 .group-name {
   font-size: 17px;
+  line-break: anywhere;
 }
 
 .group-text {
